--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,24 @@
 /* Add CSS styling here */
+
+* {
+    box-sizing: border-box;
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
+    border: 1px solid black;
+  }
+
+
+html {
+    font-size: 62.5%;
+}
+
+.home {
+
+}
+
+div nav a {
+    width:3%;
+    display: flex;
+    justify-content: flex-start;
+}
