--- a/style/index.css
+++ b/style/index.css
@@ -55,11 +55,40 @@ div h1 {
 }
 
 .littlepics {
-    height: 5;
+    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: row;
     margin-right: 0;
     flex-wrap: wrap;
+    justify-content: center;
+    justify-content: space-around;
+    align-content: space-around;
+    align-items: s;
+}
+
+.littlepics img {
+    height: 10%;
+    width: 22%;
+    padding: 2%;
+}
+
+.ending {
+    padding: 1%;
+    text-align: center;
+}
+
+footer div {
+    display: flex;
+    flex-direction: column;
+    align-content: space-around;
+}
+
+.ending div h2 {
+    padding: 3%;
+}
+
+.ending div div a {
+    padding: 2%;
 }
 
