--- a/style/index.css
+++ b/style/index.css
@@ -23,6 +23,7 @@ html {
     justify-content: flex-start;
     padding: 2%;
     margin-left: 2%;
+    margin-right: 2%;
 }
 
 nav div a {
@@ -92,3 +93,45 @@ footer div {
     padding: 2%;
 }
 
+@media(max-width:800px) {
+    .links {
+        justify-content: center;
+        }
+    h1 {
+        text-align: center;
+    }
+    .biggerpic {
+        height: 100%;
+    width: 100%;
+    }
+    .words {
+        width: 100%;
+        display: flex;
+        text-align: center;
+        flex-direction: column;
+        align-content: center;
+     }
+}
+@media(max-width:500px) {
+    .container {
+        flex-direction: column;
+    } 
+    .words {
+        display: flex;
+        margin-top: 20%;
+        background-color: crimson;
+    }
+    .links {
+        background-color: chartreuse;
+        }
+        h1 {
+            background-color: coral;
+        }
+        .littlepics {
+            background-color: darkgray;
+        }
+        .ending {
+            background-color: darkslateblue;
+        }
+    }
+}
